[Structure] Mise en place d'une première structure pour le site : les bundles

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <title>{% block title %}[LesIndecis] Gestion de crise{% endblock %}</title>
+        {% block stylesheets %}{% endblock %}        
     </head>
     <body>
         {% block body %}{% endblock %}
